src/styles/simple-table.css
/* ... */
.st-body-main,
.st-body-pinned-left,
.st-body-pinned-right {
  display: grid;
  height: max-content;
  min-height: 100%;
}
.st-body-pinned-left {
  flex-shrink: 0;

  border-right: var(--st-border-width) solid var(--st-border-color);
}
.st-body-main {
  overflow: auto;
  scrollbar-width: none;
}

.st-body-pinned-right {
  flex-shrink: 0;

  border-left: var(--st-border-width) solid var(--st-border-color);
}

.st-row {
  display: grid;
  position: absolute;
  transition: background 0.2s ease;
  min-width: 100%;
}
.st-row.even {
  background-color: var(--st-even-row-background-color);
}
.st-row.odd {
  background-color: var(--st-odd-row-background-color);
}

.st-row.odd .st-cell-content {
  color: var(--st-cell-odd-row-color);
}
.st-row.even .st-cell-content {
  color: var(--st-cell-color);
}

/* Styles for table header cells */
.st-header-cell {
  position: sticky;
  top: 0;
  background-color: var(--st-header-background-color);
  z-index: 1;
  font-weight: var(--st-font-weight-bold);

  display: flex;
  align-items: center;
  gap: var(--st-spacing-small);
  border-top: var(--st-border-width) solid transparent;
}
.st-header-cell.parent {
  border-bottom: var(--st-border-width) solid var(--st-border-color);
}
.st-header-cell.clickable {
  cursor: pointer;
}
.st-header-cell.draggable {
  cursor: grab;
}

/* Common styles for table header and cells */
.st-header-cell,
.st-cell {
  position: relative;
  display: flex;
  align-items: center;
  color: var(--st-slate-800);
  gap: var(--st-spacing-small);
  overflow: hidden;
}
.st-header-cell.right-aligned,
.st-cell.right-aligned {
  justify-content: flex-end;
  text-align: right;
}
.st-cell.right-aligned > .st-cell-content {
  text-align: right;
}
.st-header-cell.right-aligned > .st-header-label-text {
  text-align: right;
}

.st-header-cell.center-aligned,
.st-cell.center-aligned {
  justify-content: center;
  text-align: center;
}
.st-cell.center-aligned {
  padding-right: calc(
    var(--st-cell-padding) + var(--st-spacing-small) + var(--st-resize-handle-width) +
      var(--st-resize-handle-margin-right)
  );
}
.st-cell.center-aligned > .st-cell-content {
  text-align: center;
}
.st-header-cell.center-aligned > .st-header-label-text {
  text-align: center;
}

.st-cell.clickable {
  cursor: pointer;
}

.st-header-cell,
.st-cell,
.st-cell-editing {
  width: 100%;
  height: 100%;
}

.st-cell-editing {
  position: relative;
}
.st-header-label-text.right-aligned {
  justify-content: flex-end;
  text-align: right;
}
.st-header-label-text.left-aligned {
  justify-content: flex-start;
  text-align: left;
}
.st-header-label-text.center-aligned {
  justify-content: center;
  text-align: center;
}

.st-header-label {
  flex: 1;
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
}

.st-header-label-text,
.st-cell-content {
  flex: 1;

  padding-left: var(--st-cell-padding);

  user-select: none;
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100%;
}

.st-header-label-text {
  padding-right: var(--st-cell-padding);
  color: var(--st-header-label-color);
}
.st-cell-content {
  padding-right: calc(
    var(--st-cell-padding) + var(--st-spacing-small) + var(--st-resize-handle-width) +
      var(--st-resize-handle-margin-right)
  );
}
.st-cell-content.right-aligned {
  justify-content: flex-end;
  text-align: right;
}
.st-cell-content.left-aligned {
  justify-content: flex-start;
  text-align: left;
}
.st-cell-content.center-aligned {
  justify-content: center;
  text-align: center;
}
.st-cell {
  border: var(--st-border-width) solid transparent;
}

.st-cell-depth-1 {
  padding-left: calc(var(--st-cell-padding) * 4);
}
.st-cell-depth-2 {
  padding-left: calc(var(--st-cell-padding) * 8);
}
.st-cell-depth-3 {
  padding-left: calc(var(--st-cell-padding) * 12);
}
.st-cell-depth-4 {
  padding-left: calc(var(--st-cell-padding) * 16);
}
.st-cell-depth-5 {
  padding-left: calc(var(--st-cell-padding) * 20);
}
.st-cell-depth-6 {
  padding-left: calc(var(--st-cell-padding) * 24);
}
.st-cell-depth-7 {
  padding-left: calc(var(--st-cell-padding) * 28);
}

.st-sort-icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 4px;
}

.st-sort-icon {
  fill: var(--st-slate-500);
}

.st-header-resize-handle {
  flex-shrink: 0;
  top: 0;
  right: 0;
  width: var(--st-resize-handle-width);
  height: calc(100% - 20px);
  cursor: col-resize;
  background-color: var(--st-resize-handle-color);
  margin-right: var(--st-resize-handle-margin-right);
}

.st-row-separator {
  height: 1px;
  background-color: var(--st-separator-border-color);
  grid-column: 1 / -1;
}
.st-row-separator.st-last-group-row {
  background-color: var(--st-last-group-row-separator-border-color);
}

/* Style for a cell when it is being dragged */
.st-dragging {
  background-color: var(--st-dragging-background-color);
}

/* Style for selected table cells */
.st-cell-selected {
  background-color: var(--st-selected-cell-background-color);
}
.st-cell-selected .st-cell-content {
  color: var(--st-selected-cell-color) !important;
}

/* Style for the first selected table cell */
.st-cell-selected-first {
  background-color: var(--st-selected-first-cell-background-color) !important;
  border: var(--st-border-width) solid var(--st-selected-border-color);
}
.st-cell-selected-first .st-cell-content {
  color: var(--st-selected-first-cell-color) !important;
}

/* Border for selected cells */
.st-selected-top-border {
  border-top: var(--st-border-width) solid var(--st-selected-border-color);
}

.st-selected-bottom-border {
  border-bottom: var(--st-border-width) solid var(--st-selected-border-color);
}

.st-selected-left-border {
  border-left: var(--st-border-width) solid var(--st-selected-border-color);
}

.st-selected-right-border {
  border-right: var(--st-border-width) solid var(--st-selected-border-color);
}
/* ... */

